# bazel-socketio-issue

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  _index.html  main.dev.ts  main.prod.ts  package.json  postinstall-patches.js
app/: BUILD.bazel  app.component.ts  app.module.ts
