load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.ts",
    ],
    tsconfig = "//:tsconfig.json",
    use_angular_plugin = True,
    deps = [
        "@npm//@angular/common",
        "@npm//@angular/compiler-cli",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//ngx-socket-io",
    ],
)
